--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "main": "./index.ts",
   "dependencies": {
-    "@stomp/stompjs": "^4.0.0 >=4.0.2"
+    "@stomp/stompjs": "^4.0.0 >=4.0.2",
     "angular2-uuid": "^1.1.1"
   },
   "devDependencies": {
